--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 max-line-length = 119
-exclude = data
+exclude = data, __init__.py
 [isort]
 combine_as_imports = true
 default_section = THIRDPARTY
